Issue #22453: Removed non-documented macro PyObject_REPR().